test/bad/dictionaries/decl02.px

{Float:String?} d = {'1': null}
